--- a/10-tailwindcss-1/app/package.json
+++ b/10-tailwindcss-1/app/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "_scrip.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tailwindcss -i ./src/main.css -o ./src/output.css --watch"
   },
   "keywords": [],
   "author": "",
